# AutoFirm

./: .gitignore  .gitleaks.toml  .importlinter  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
11-fundraising-investor-relations/: BEST-PARTS.md  SUMMARY.md
docs/: roadmap.md  threat-model-stride-components.md  threat-model.md
docs/architecture/: ADR-001-implementation-stack.md  ADR-002-repo-layout.md  ADR-003-model-egress-gateway.md  ARCH-QA-001.md  README.md  W1-gateway-default-and-config.md  data-contracts.md  evolution-plan.md  experiments.md  gate1-decisions.md  human-output-review-gate-plan.md  org-model.md  output-review-model-advisory-layer-decision.md  overview.md  roadmap.md  substrate.md  system-activation-design.md  tension-resolutions.md  worktree-coordination.md
evidence/: README.md
evidence/_raw/: evidence_data.json  test_count.txt
evidence/cockpit-screenshots/: README.md
evidence/diagrams/: activation_lifecycle_flow.html  build_operate_flow.html  cockpit_control_plane_flow.html  output_review_gate_flow.html  system_architecture.html
evidence/generators/: collect_real_evidence.py  flow_diagram_primitives.py  render_activation_lifecycle_flow.py  render_build_operate_flow.py  render_cockpit_control_plane_flow.py  render_company_financials.py  render_coverage_bar.py  render_e2e_matrix.py  render_output_review_gate_flow.py  render_statistics_page.py  render_system_architecture.py  run_all.py  showcase_style.py
evidence/graphs/: company_financials.html  coverage_by_package.html  e2e_pass_matrix.html
evidence/output_review/: README.md  requirements-analysis.txt
evidence/stats/: statistical_evidence.md
scripts/: _output_review_mutation_runner.py  _survivor_report.py  _w2_mutation_runner.py  autofirm_resume_watchdog.ps1  capture_cockpit_screenshots.py  run_mutation_gate.py
src/autofirm/: __init__.py
tests/: conftest.py  test_autofirm_resume_watchdog__decision_table.ps1
tests/access/: synthetic_access_fixtures.py  test_access_contracts__validation_edges.py  test_credential_broker__least_privilege_and_fail_closed.py  test_credential_secret__never_logged.py  test_rls_tenant_isolation__cross_tenant_always_denied.py  test_secret_source__env_only_and_fail_closed.py  test_workspace_data_boundary__fail_closed.py
tests/artifacts/: test_business_document_builder__structure.py  test_business_document_spec__validation.py  test_excel_financial_model_builder__structure.py  test_financial_model_spec__validation.py  test_ooxml_timestamp_normalizer__determinism.py  test_slide_deck_builder__structure.py  test_slide_deck_spec__validation.py
tests/audit/: __init__.py  synthetic_audit_records.py  test_audit_mutation_survivors__hardening.py  test_audit_record_contract__canonical_and_hashing.py  test_bakeoff_measurement_harness__metric.py  test_candidate_a_hash_chain_log__tamper_and_property.py  test_candidate_b_consistency_proof__truncation.py  test_candidate_b_merkle_audit_log__append_seal_shred.py  test_candidate_b_merkle_tree_hash__inclusion.py
tests/bootstrap/: __init__.py  test_bootstrap_doctor_report__readonly_diagnosis.py  test_bootstrap_step_contract__enum_and_protocol_shape.py  test_degraded_mode_policy__criticality_matrix.py  test_idempotent_environment_bootstrapper__convergence.py
tests/capabilities/: synthetic_capability_factory.py  test_capability_descriptor__fail_closed_validation.py  test_capability_growth_log__hash_chain_tamper.py  test_capability_registry__defensive_branches.py  test_capability_registry__edge_paths_and_clearances.py  test_live_capability_registry__pure_replay_property.py  test_org_event_to_capability_projection__generality_and_injection.py  test_role_capability_index__live_registry_cutover.py
tests/cockpit/: test_main_module__delegates_to_cli.py
tests/comms/: __init__.py  synthetic_comms_fixtures.py  test_comms_components__registry_dedup_ordering_clock.py  test_inter_agent_message_bus__dedup_and_ordering_properties.py  test_inter_agent_message_bus__routing_and_fail_closed.py  test_message_envelope_contract__boundary_fail_closed.py
tests/costledger/: synthetic_cost_fixtures.py  test_append_only_cost_ledger__tamper_and_reversal.py  test_cost_authorship__red_team.py  test_costledger__edge_hardening.py  test_exact_cost_computation__zero_numerical_error.py  test_price_catalog_contract__lookup_and_freeze.py  test_provider_billing_reconciliation__zero_drift.py  test_provider_usage_adapters__quirk_regressions.py  test_spend_rollup_views__exact_summation.py  test_usage_cost_record__validation_and_hashing.py
tests/decisions/: test_customer_unit_economics__invariants_and_goldens.py  test_decision_model_contract__explainability_and_failclosed.py  test_decision_model_persistence__lossless_roundtrip.py  test_operational_runway__invariants_and_goldens.py  test_price_recommendation__invariants_and_goldens.py
tests/design_product/: __init__.py  test_design_tokens_contract__not_vibe_coded_gate.py  test_design_workflow__legal_transitions_and_split.py  test_ui_definition_of_done_gate__done_iff_all_pass.py  test_ui_state_coverage_and_brief__every_state_gate.py
(+1195 files in other folders)
