[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# =============================================================================
# AutoFirm platform — Gate-3 build skeleton (ADR-001 stack: Python 3.12+).
# Runtime deps are minimal; plotting/diagram/eval libs live ONLY in the
# `analysis` extra and are import-linter-fenced out of the runtime closure
# (CLAUDE.md §3.10; ADR-001 §5). Determinism + fail-closed are defaults.
# =============================================================================

[project]
name = "autofirm"
version = "0.0.1"
description = "AutoFirm — autonomous, auditable, self-organising multi-agent platform that builds and operates companies end-to-end."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "AutoFirm" }]

# RUNTIME ONLY (ADR-001 §5): no plotting/diagram/eval libs may appear here.
# Concurrency runtime (asyncio/AnyIO/Trio) is the open fork on
# experiment/concurrency-runtime — deliberately NOT pinned in the skeleton.
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
# Test toolchain (ADR-001 §2): the mutation score is the acceptance signal.
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.5",
  "hypothesis>=6.100",
  # Pinned to 2.x: mutmut 3.x dropped native-Windows support (requires WSL);
  # 2.x runs natively on the Windows dev box and exposes the
  # `mutmut run` / `mutmut results` CLI that ADR-001 §3 wires. (CI Linux can use
  # either.)
  "mutmut>=2.4,<3.0",
]
# Static analysis / lint / SAST / contract / secret tooling (ADR-001 §2, §4).
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "import-linter>=2.0",
  "bandit>=1.7",
]
# ANALYSIS-ONLY (ADR-001 §5; CLAUDE.md §3.10): evidence/ showcase ONLY.
# These MUST NEVER be imported by runtime packages (import-linter enforced).
analysis = [
  "matplotlib>=3.8",
  "plotly>=5.20",
  "graphviz>=0.20",
  "cairosvg>=2.7",
  "scipy>=1.13",
  "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]

# -----------------------------------------------------------------------------
# Ruff — lint + format gate (ADR-001 §3 step 1; CLAUDE.md §5.7).
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PL", "RUF", "D"]
ignore = [
  "D203",  # one-blank-line-before-class (conflicts with D211)
  "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests may omit module/function docstrings and use assert-heavy bodies.
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "PLR2004"]

# -----------------------------------------------------------------------------
# Mypy — strict type gate (ADR-001 §1, §3 step 1; CLAUDE.md §5.7).
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
disallow_any_generics = true
mypy_path = "src"
packages = ["autofirm"]

# -----------------------------------------------------------------------------
# Pytest + coverage — branch mode on; gate line ≥ 90% (ADR-001 §2, §3 step 5).
# Coverage is NECESSARY-NOT-SUFFICIENT — the mutation gate is load-bearing.
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-q",
  "--strict-markers",
  "--cov=autofirm",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
markers = [
  "unit: fast isolated behaviour tests",
  "property: Hypothesis property-based tests (PBT mandatory — CLAUDE.md §3.6)",
  "security: trust-boundary / abuse-case tests",
]

[tool.coverage.run]
branch = true
source = ["autofirm"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

# -----------------------------------------------------------------------------
# Mutmut — mutation gate; the ACCEPTANCE SIGNAL (ADR-001 §2, §3 step 6).
# -----------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = "src/autofirm/"
tests_dir = "tests/"
# Run pytest without the coverage gate during mutation (coverage gating is a
# separate step); -x stops at the first failure so a killed mutant returns fast.
runner = "python -m pytest -x -q -p no:cacheprovider --no-header --rootdir=. -o addopts='' -o pythonpath=src"

# -----------------------------------------------------------------------------
# Bandit — Python SAST (ADR-001 §4). Excludes tests (assert is expected there).
# -----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv", "evidence"]
